--- a/file-system-files/Makefile
+++ b/file-system-files/Makefile
@@ -1,4 +1,4 @@
-BINS = wfs mkfs
+BINS = hfs mkfs
 CC = gcc
 CFLAGS = -Wall -Werror -pedantic -std=gnu18 -g
 FUSE_CFLAGS = `pkg-config fuse --cflags --libs`
@@ -8,7 +8,7 @@ FUSE_CFLAGS = `pkg-config fuse --cflags --libs`
 all: $(BINS)
 
 wfs:
-	$(CC) $(CFLAGS) wfs.c $(FUSE_CFLAGS) -o wfs
+	$(CC) $(CFLAGS) hfs.c $(FUSE_CFLAGS) -o hfs
 mkfs:
 	$(CC) $(CFLAGS) -o mkfs mkfs.c
 
